05 - Arregladas todas las plantillas para que ejecuten las rutas desde el server

--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/account.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/account.html
@@ -9,9 +9,9 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/style.css" />
 		<!-- Javascript -->	
-		<script type="text/javascript" src="../static/js/jquery.min.js"></script>
+		<script type="text/javascript" src="/static/js/jquery.min.js"></script>
  	</head>
 <body>
 
@@ -19,8 +19,8 @@
 		<div class="container">
 			<div class="brand">
 				<div class="logo">
-					<a href="index.html">
-						<img src="../static/img/icons/online_shopping.png">
+					<a href="index">
+						<img src="/static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -29,16 +29,16 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="../static/img/icons/account.png">
+						<img src="/static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
-								<li><a href="account.html">My Account</a></li>
-								<li><a href="orders.html">My Orders</a></li>
+								<li><a href="account">My Account</a></li>
+								<li><a href="orders">My Orders</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="../static/img/icons/heart.png">
+						<img src="/static/img/icons/heart.png">
 						<div class="dropdown-menu wishlist-item">
 							<table border="1">
 								<thead>
@@ -49,11 +49,11 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="../static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 									</tr>
 									<tr>
-										<td><img src="../static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 									</tr>
 								</tbody>
@@ -61,7 +61,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="../static/img/icons/shopping_cart.png">
+						<img src="/static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -75,14 +75,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="../static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="../static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -98,17 +98,17 @@
 			<div class="menu-bar">
 				<div class="menu">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="shop.html">Shop</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="index">Home</a></li>
+						<li><a href="shop">Shop</a></li>
+						<li><a href="about">About</a></li>
+						<li><a href="contact">Contact</a></li>
 					</ul>
 				</div>
 				<div class="search-bar">
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="../static/img/icons/search.png">
+							<img src="/static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -120,7 +120,7 @@
 		<main>
 			<div class="breadcrumb">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index">Home</a></li>
 					<li> / </li>
 					<li>Account</li>
 				</ul>
@@ -129,14 +129,14 @@
 			<div class="account-page">
 				<div class="profile">
 					<div class="profile-img">
-						<img src="../static/img/product/img5.jpg">
+						<img src="/static/img/product/img5.jpg">
 						<h2>John Doe</h2>
 						<p>john_doe@mail.com</p>
 					</div>
 					<ul>
-						<li><a href="account.html" class="active">Account <span>></span></a></li>
-						<li><a href="orders.html">My Orders <span>></span></a></li>
-						<li><a href="change-password.html">Change Password <span>></span></a></li>
+						<li><a href="account" class="active">Account <span>></span></a></li>
+						<li><a href="orders">My Orders <span>></span></a></li>
+						<li><a href="change-password">Change Password <span>></span></a></li>
 						<li><a href="">Logout <span>></span></a></li>
 					</ul>
 				</div>
@@ -204,10 +204,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="refund.html">Refund Policy</a></li>
-							<li><a href="terms.html">Terms & Conditions</a></li>
+							<li><a href="about">About</a></li>
+							<li><a href="contact">Contact</a></li>
+							<li><a href="refund">Refund Policy</a></li>
+							<li><a href="terms">Terms & Conditions</a></li>
 						</ul>
 					</div>
 				</div>
@@ -217,10 +217,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="account.html">My Account</a></li>
-							<li><a href="orders.html">My Orders</a></li>
-							<li><a href="cart.html">Cart</a></li>
-							<li><a href="checkout.html">Checkout</a></li>
+							<li><a href="account">My Account</a></li>
+							<li><a href="orders">My Orders</a></li>
+							<li><a href="cart">Cart</a></li>
+							<li><a href="checkout">Checkout</a></li>
 						</ul>
 					</div>
 				</div>
@@ -231,9 +231,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -245,7 +245,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="../static/img/icons/paper_plane.png">
+									<img src="/static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -257,9 +257,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="../static/img/icons/paper_money.png">
-					<img src="../static/img/icons/visa.png">
-					<img src="../static/img/icons/mastercard.png">
+					<img src="/static/img/icons/paper_money.png">
+					<img src="/static/img/icons/visa.png">
+					<img src="/static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
