--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/cart.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/cart.html
@@ -9,9 +9,9 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/style.css" />
 		<!-- Javascript -->	
-		<script type="text/javascript" src="../static/js/jquery.min.js"></script>
+		<script type="text/javascript" src="/static/js/jquery.min.js"></script>
   		<script>
   			$(document).ready(function(){
   				
@@ -46,8 +46,8 @@
 		<div class="container">
 			<div class="brand">
 				<div class="logo">
-					<a href="index.html">
-						<img src="../static/img/icons/online_shopping.png">
+					<a href="index">
+						<img src="/static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -56,16 +56,16 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="../static/img/icons/account.png">
+						<img src="/static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
-								<li><a href="account.html">My Account</a></li>
-								<li><a href="orders.html">My Orders</a></li>
+								<li><a href="account">My Account</a></li>
+								<li><a href="orders">My Orders</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="../static/img/icons/heart.png">
+						<img src="/static/img/icons/heart.png">
 						<div class="dropdown-menu wishlist-item">
 							<table border="1">
 								<thead>
@@ -76,11 +76,11 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="../static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 									</tr>
 									<tr>
-										<td><img src="../static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 									</tr>
 								</tbody>
@@ -88,7 +88,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="../static/img/icons/shopping_cart.png">
+						<img src="/static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -102,14 +102,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="../static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="../static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -125,17 +125,17 @@
 			<div class="menu-bar">
 				<div class="menu">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="shop.html">Shop</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="index">Home</a></li>
+						<li><a href="shop">Shop</a></li>
+						<li><a href="about">About</a></li>
+						<li><a href="contact">Contact</a></li>
 					</ul>
 				</div>
 				<div class="search-bar">
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="../static/img/icons/search.png">
+							<img src="/static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -147,9 +147,9 @@
 		<main>
 			<div class="breadcrumb">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index">Home</a></li>
 					<li> / </li>
-					<li><a href="shop.html">Shop</a></li>
+					<li><a href="shop">Shop</a></li>
 					<li> / </li>
 					<li>Cart</li>
 				</ul>
@@ -166,7 +166,7 @@
 						</thead>
 						<tbody>
 							<tr>
-								<td style="width: 20%;"><img src="../static/img/product/img1.jpg"></td>
+								<td style="width: 20%;"><img src="/static/img/product/img1.jpg"></td>
 								<td style="width: 60%;">
 									<h2>Product Title</h2>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -184,7 +184,7 @@
 								</td>
 							</tr>
 							<tr>
-								<td style="width: 20%;"><img src="../static/img/product/img2.jpg"></td>
+								<td style="width: 20%;"><img src="/static/img/product/img2.jpg"></td>
 								<td style="width: 60%;">
 									<h2>Product Title</h2>
 									<p >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -202,7 +202,7 @@
 								</td>
 							</tr>
 							<tr>
-								<td style="width: 20%;"><img src="../static/img/product/img3.jpg"></td>
+								<td style="width: 20%;"><img src="/static/img/product/img3.jpg"></td>
 								<td style="width: 60%;">
 									<h2>Product Title</h2>
 									<p >Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -237,7 +237,7 @@
 							<li>Number of items x 20</li>
 							<hr>
 							<li>Cart Total <span style="float: right;">Rs.1200</span></li>
-							<li><a href="checkout.html">Go to Checkout</a></li>
+							<li><a href="checkout">Go to Checkout</a></li>
 						</ul>
 					</div>
 				</div>
@@ -254,10 +254,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="refund.html">Refund Policy</a></li>
-							<li><a href="terms.html">Terms & Conditions</a></li>
+							<li><a href="about">About</a></li>
+							<li><a href="contact">Contact</a></li>
+							<li><a href="refund">Refund Policy</a></li>
+							<li><a href="terms">Terms & Conditions</a></li>
 						</ul>
 					</div>
 				</div>
@@ -267,10 +267,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="account.html">My Account</a></li>
-							<li><a href="orders.html">My Orders</a></li>
-							<li><a href="cart.html">Cart</a></li>
-							<li><a href="checkout.html">Checkout</a></li>
+							<li><a href="account">My Account</a></li>
+							<li><a href="orders">My Orders</a></li>
+							<li><a href="cart">Cart</a></li>
+							<li><a href="checkout">Checkout</a></li>
 						</ul>
 					</div>
 				</div>
@@ -281,9 +281,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -295,7 +295,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="../static/img/icons/paper_plane.png">
+									<img src="/static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -307,9 +307,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="../static/img/icons/paper_money.png">
-					<img src="../static/img/icons/visa.png">
-					<img src="../static/img/icons/mastercard.png">
+					<img src="/static/img/icons/paper_money.png">
+					<img src="/static/img/icons/visa.png">
+					<img src="/static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
