--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/contact.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/contact.html
@@ -9,7 +9,7 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/style.css" />
  	</head>
 <body>
 
@@ -17,8 +17,8 @@
 		<div class="container">
 			<div class="brand">
 				<div class="logo">
-					<a href="index.html">
-						<img src="../static/img/icons/online_shopping.png">
+					<a href="index">
+						<img src="/static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -27,16 +27,16 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="../static/img/icons/account.png">
+						<img src="/static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
-								<li><a href="account.html">My Account</a></li>
-								<li><a href="orders.html">My Orders</a></li>
+								<li><a href="account">My Account</a></li>
+								<li><a href="orders">My Orders</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="../static/img/icons/heart.png">
+						<img src="/static/img/icons/heart.png">
 						<div class="dropdown-menu wishlist-item">
 							<table border="1">
 								<thead>
@@ -47,11 +47,11 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="../static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 									</tr>
 									<tr>
-										<td><img src="../static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 									</tr>
 								</tbody>
@@ -59,7 +59,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="../static/img/icons/shopping_cart.png">
+						<img src="/static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -73,14 +73,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="../static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="../static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -96,17 +96,17 @@
 			<div class="menu-bar">
 				<div class="menu">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="shop.html">Shop</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="index">Home</a></li>
+						<li><a href="shop">Shop</a></li>
+						<li><a href="about">About</a></li>
+						<li><a href="contact">Contact</a></li>
 					</ul>
 				</div>
 				<div class="search-bar">
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="../static/img/icons/search.png">
+							<img src="/static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -153,10 +153,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="refund.html">Refund Policy</a></li>
-							<li><a href="terms.html">Terms & Conditions</a></li>
+							<li><a href="about">About</a></li>
+							<li><a href="contact">Contact</a></li>
+							<li><a href="refund">Refund Policy</a></li>
+							<li><a href="terms">Terms & Conditions</a></li>
 						</ul>
 					</div>
 				</div>
@@ -166,10 +166,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="account.html">My Account</a></li>
-							<li><a href="orders.html">My Orders</a></li>
-							<li><a href="cart.html">Cart</a></li>
-							<li><a href="checkout.html">Checkout</a></li>
+							<li><a href="account">My Account</a></li>
+							<li><a href="orders">My Orders</a></li>
+							<li><a href="cart">Cart</a></li>
+							<li><a href="checkout">Checkout</a></li>
 						</ul>
 					</div>
 				</div>
@@ -180,9 +180,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -194,7 +194,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="../static/img/icons/paper_plane.png">
+									<img src="/static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -206,9 +206,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="../static/img/icons/paper_money.png">
-					<img src="../static/img/icons/visa.png">
-					<img src="../static/img/icons/mastercard.png">
+					<img src="/static/img/icons/paper_money.png">
+					<img src="/static/img/icons/visa.png">
+					<img src="/static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
