--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/index.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/index.html
@@ -31,7 +31,7 @@
 		<div class="container">
 			<div class="brand">
 				<div class="logo">
-					<a href="index.html">
+					<a href="index/">
 						<img src="/static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
@@ -44,8 +44,8 @@
 						<img src="/static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
-								<li><a href="account.html">My Account</a></li>
-								<li><a href="orders.html">My Orders</a></li>
+								<li><a href="account">My Account</a></li>
+								<li><a href="orders">My Orders</a></li>
 							</ul>
 						</div>
 					</div>
@@ -64,14 +64,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="/static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/productimg1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="/static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/productimg2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -87,10 +87,10 @@
 			<div class="menu-bar">
 				<div class="menu">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="shop.html">Shop</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="index">Home</a></li>
+						<li><a href="shop">Shop</a></li>
+						<li><a href="about">About</a></li>
+						<li><a href="contact">Contact</a></li>
 					</ul>
 				</div>
 				<div class="search-bar">
@@ -141,8 +141,8 @@
 				</div>
 				<div class="product-content">
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img1.jpg">
+						<a href="product">
+							<img src="/static/img/productimg1.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -152,8 +152,8 @@
 						</div>						
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img2.jpg">
+						<a href="product">
+							<img src="/static/img/productimg2.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Pants</h3>
@@ -163,8 +163,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img3.jpg">
+						<a href="product">
+							<img src="/static/img/productimg3.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -174,8 +174,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img4.jpg">
+						<a href="product">
+							<img src="/static/img/productimg4.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -185,8 +185,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img5.jpg">
+						<a href="product">
+							<img src="/static/img/productimg5.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Glasses</h3>
@@ -196,8 +196,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img6.jpg">
+						<a href="product">
+							<img src="/static/img/productimg6.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Women's / Hand Bags</h3>
@@ -207,8 +207,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img7.jpg">
+						<a href="product">
+							<img src="/static/img/productimg7.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -218,8 +218,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img8.jpg">
+						<a href="product">
+							<img src="/static/img/productimg8.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Women's / Hand Bags</h3>
@@ -247,8 +247,8 @@
 				</div>
 				<div class="product-content">
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img1.jpg">
+						<a href="product">
+							<img src="/static/img/productimg1.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -258,8 +258,8 @@
 						</div>						
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img2.jpg">
+						<a href="product">
+							<img src="/static/img/productimg2.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Pants</h3>
@@ -269,8 +269,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img3.jpg">
+						<a href="product">
+							<img src="/static/img/productimg3.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -280,8 +280,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="/static/img/product/img4.jpg">
+						<a href="product">
+							<img src="/static/img/productimg4.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -304,10 +304,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="refund.html">Refund Policy</a></li>
-							<li><a href="terms.html">Terms & Conditions</a></li>
+							<li><a href="about/">About</a></li>
+							<li><a href="contact">Contact</a></li>
+							<li><a href="refund">Refund Policy</a></li>
+							<li><a href="terms">Terms & Conditions</a></li>
 						</ul>
 					</div>
 				</div>
@@ -317,10 +317,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="account.html">My Account</a></li>
-							<li><a href="orders.html">My Orders</a></li>
-							<li><a href="cart.html">Cart</a></li>
-							<li><a href="checkout.html">Checkout</a></li>
+							<li><a href="account">My Account</a></li>
+							<li><a href="orders">My Orders</a></li>
+							<li><a href="cart">Cart</a></li>
+							<li><a href="checkout">Checkout</a></li>
 						</ul>
 					</div>
 				</div>
