--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/product.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/product.html
@@ -9,20 +9,20 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/style.css" />
 		<!-- Javascript -->	
-		<script type="text/javascript" src="../static/js/jquery.min.js"></script>
+		<script type="text/javascript" src="/static/js/jquery.min.js"></script>
 		<!-- FancyBox -->
-		<link rel="stylesheet" href="../static/fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="../static/fancybox/source/jquery.fancybox.pack.js"></script>
+		<link rel="stylesheet" href="/static/fancybox/source/jquery.fancybox.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="/static/fancybox/source/jquery.fancybox.pack.js"></script>
 
 		<!-- Optionally add helpers - button, thumbnail and/or media -->
-		<link rel="stylesheet" href="../static/fancybox/source/helpers/jquery.fancybox-buttons.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="../static/fancybox/source/helpers/jquery.fancybox-buttons.js"></script>
-		<script type="text/javascript" src="../static/fancybox/source/helpers/jquery.fancybox-media.js"></script>
+		<link rel="stylesheet" href="/static/fancybox/source/helpers/jquery.fancybox-buttons.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="/static/fancybox/source/helpers/jquery.fancybox-buttons.js"></script>
+		<script type="text/javascript" src="/static/fancybox/source/helpers/jquery.fancybox-media.js"></script>
 
-		<link rel="stylesheet" href="../static/fancybox/source/helpers/jquery.fancybox-thumbs.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="../static/fancybox/source/helpers/jquery.fancybox-thumbs.js"></script>
+		<link rel="stylesheet" href="/static/fancybox/source/helpers/jquery.fancybox-thumbs.css" type="text/css" media="screen" />
+		<script type="text/javascript" src="/static/fancybox/source/helpers/jquery.fancybox-thumbs.js"></script>
 		<script>
 		$(document).ready(function(){		
 			$('.fancybox').fancybox({
@@ -55,8 +55,8 @@
 		<div class="container">
 			<div class="brand">
 				<div class="logo">
-					<a href="index.html">
-						<img src="../static/img/icons/online_shopping.png">
+					<a href="index">
+						<img src="/static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -65,16 +65,16 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="../static/img/icons/account.png">
+						<img src="/static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
-								<li><a href="account.html">My Account</a></li>
-								<li><a href="orders.html">My Orders</a></li>
+								<li><a href="account">My Account</a></li>
+								<li><a href="orders">My Orders</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="../static/img/icons/heart.png">
+						<img src="/static/img/icons/heart.png">
 						<div class="dropdown-menu wishlist-item">
 							<table border="1">
 								<thead>
@@ -85,11 +85,11 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="../static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 									</tr>
 									<tr>
-										<td><img src="../static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 									</tr>
 								</tbody>
@@ -97,7 +97,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="../static/img/icons/shopping_cart.png">
+						<img src="/static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -111,14 +111,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="../static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="../static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -134,17 +134,17 @@
 			<div class="menu-bar">
 				<div class="menu">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="shop.html">Shop</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="index">Home</a></li>
+						<li><a href="shop">Shop</a></li>
+						<li><a href="about">About</a></li>
+						<li><a href="contact">Contact</a></li>
 					</ul>
 				</div>
 				<div class="search-bar">
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="../static/img/icons/search.png">
+							<img src="/static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -156,7 +156,7 @@
 		<main>
 			<div class="breadcrumb">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index">Home</a></li>
 					<li> / </li>
 					<li><a href="">Shop</a></li>
 					<li> / </li>
@@ -167,20 +167,20 @@
 			<div class="single-product">
 				<div class="images-section">
 					<div class="larg-img">
-						<img src="../static/img/product/img1.jpg">
+						<img src="/static/img/product/img1.jpg">
 					</div>
 					<div class="small-img">
-						<a class="fancybox" rel="group" href="../static/img/product/img2.jpg">
-							<img src="../static/img/product/img2.jpg">
+						<a class="fancybox" rel="group" href="/static/img/product/img2.jpg">
+							<img src="/static/img/product/img2.jpg">
 						</a>
-						<a class="fancybox" rel="group" href="../static/img/product/img3.jpg">
-							<img src="../static/img/product/img3.jpg">
+						<a class="fancybox" rel="group" href="/static/img/product/img3.jpg">
+							<img src="/static/img/product/img3.jpg">
 						</a>
-						<a class="fancybox" rel="group" href="../static/img/product/img4.jpg">
-							<img src="../static/img/product/img4.jpg">
+						<a class="fancybox" rel="group" href="/static/img/product/img4.jpg">
+							<img src="/static/img/product/img4.jpg">
 						</a>
-						<a class="fancybox" rel="group" href="../static/img/product/img5.jpg">
-							<img src="../static/img/product/img5.jpg">
+						<a class="fancybox" rel="group" href="/static/img/product/img5.jpg">
+							<img src="/static/img/product/img5.jpg">
 						</a>
 					</div>
 				</div> <!-- End of Images Section-->
@@ -230,13 +230,13 @@
 			<hr>
 			<div class="new-product-section">
 				<div class="product-section-heading">
-					<h2>Recommend Products <img src="../static/img/icons/good_quality.png"></h2>
+					<h2>Recommend Products <img src="/static/img/icons/good_quality.png"></h2>
 					<h3>OUR BEST PRODUCTS RECOMMENDED FOR YOU</h3>
 				</div>
 				<div class="product-content">
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img1.jpg">
+						<a href="product">
+							<img src="/static/img/product/img1.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -246,8 +246,8 @@
 						</div>						
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img2.jpg">
+						<a href="product">
+							<img src="/static/img/product/img2.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Pants</h3>
@@ -257,8 +257,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img3.jpg">
+						<a href="product">
+							<img src="/static/img/product/img3.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -268,8 +268,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img4.jpg">
+						<a href="product">
+							<img src="/static/img/product/img4.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -292,10 +292,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="refund.html">Refund Policy</a></li>
-							<li><a href="terms.html">Terms & Conditions</a></li>
+							<li><a href="about">About</a></li>
+							<li><a href="contact">Contact</a></li>
+							<li><a href="refund">Refund Policy</a></li>
+							<li><a href="terms">Terms & Conditions</a></li>
 						</ul>
 					</div>
 				</div>
@@ -305,10 +305,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="account.html">My Account</a></li>
-							<li><a href="orders.html">My Orders</a></li>
-							<li><a href="cart.html">Cart</a></li>
-							<li><a href="checkout.html">Checkout</a></li>
+							<li><a href="account">My Account</a></li>
+							<li><a href="orders">My Orders</a></li>
+							<li><a href="cart">Cart</a></li>
+							<li><a href="checkout">Checkout</a></li>
 						</ul>
 					</div>
 				</div>
@@ -319,9 +319,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -333,7 +333,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="../static/img/icons/paper_plane.png">
+									<img src="/static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -345,9 +345,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="../static/img/icons/paper_money.png">
-					<img src="../static/img/icons/visa.png">
-					<img src="../static/img/icons/mastercard.png">
+					<img src="/static/img/icons/paper_money.png">
+					<img src="/static/img/icons/visa.png">
+					<img src="/static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
