--- a/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/shop.html
+++ b/05 - Product Store (JPA, Spring Security, JWT)/src/main/resources/templates/shop.html
@@ -9,10 +9,10 @@
 		<!-- Title -->
  		<title>E-Commerce Online Shop</title>
  		<!-- Style Sheet -->
-		<link rel="stylesheet" type="text/css" href="../static/css/style.css" />
+		<link rel="stylesheet" type="text/css" href="/static/css/style.css" />
 		<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 		<!-- Javascript -->	
-		<script type="text/javascript" src="../static/js/jquery.min.js"></script>
+		<script type="text/javascript" src="/static/js/jquery.min.js"></script>
   		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   		<script>		   
 		    $( function() {
@@ -36,8 +36,8 @@
 		<div class="container">
 			<div class="brand">
 				<div class="logo">
-					<a href="index.html">
-						<img src="../static/img/icons/online_shopping.png">
+					<a href="index">
+						<img src="/static/img/icons/online_shopping.png">
 						<div class="logo-text">
 							<p class="big-logo">Ecommerce</p>
 							<p class="small-logo">online shop</p>
@@ -46,16 +46,16 @@
 				</div> <!-- logo -->
 				<div class="shop-icon">
 					<div class="dropdown">
-						<img src="../static/img/icons/account.png">
+						<img src="/static/img/icons/account.png">
 						<div class="dropdown-menu">
 							<ul>
-								<li><a href="account.html">My Account</a></li>
-								<li><a href="orders.html">My Orders</a></li>
+								<li><a href="account">My Account</a></li>
+								<li><a href="orders">My Orders</a></li>
 							</ul>
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="../static/img/icons/heart.png">
+						<img src="/static/img/icons/heart.png">
 						<div class="dropdown-menu wishlist-item">
 							<table border="1">
 								<thead>
@@ -66,11 +66,11 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="../static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 									</tr>
 									<tr>
-										<td><img src="../static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 									</tr>
 								</tbody>
@@ -78,7 +78,7 @@
 						</div>
 					</div>
 					<div class="dropdown">
-						<img src="../static/img/icons/shopping_cart.png">
+						<img src="/static/img/icons/shopping_cart.png">
 						<div class="dropdown-menu cart-item">
 							<table border="1">
 								<thead>
@@ -92,14 +92,14 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td><img src="../static/img/product/img1.jpg"></td>
+										<td><img src="/static/img/product/img1.jpg"></td>
 										<td>product name</td>
 										<td class="center">1200</td>
 										<td class="center">2</td>
 										<td class="center">2400</td>
 									</tr>
 									<tr>
-										<td><img src="../static/img/product/img2.jpg"></td>
+										<td><img src="/static/img/product/img2.jpg"></td>
 										<td>product name</td>
 										<td class="center">1500</td>
 										<td class="center">2</td>
@@ -115,17 +115,17 @@
 			<div class="menu-bar">
 				<div class="menu">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="shop.html">Shop</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="index">Home</a></li>
+						<li><a href="shop">Shop</a></li>
+						<li><a href="about">About</a></li>
+						<li><a href="contact">Contact</a></li>
 					</ul>
 				</div>
 				<div class="search-bar">
 					<form>
 						<div class="form-group">
 							<input type="text" class="form-control" name="search" placeholder="Search">
-							<img src="../static/img/icons/search.png">
+							<img src="/static/img/icons/search.png">
 						</div>
 					</form>
 				</div>
@@ -137,7 +137,7 @@
 		<main>
 			<div class="breadcrumb">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="index">Home</a></li>
 					<li> / </li>
 					<li>Shop</li>
 				</ul>
@@ -167,8 +167,8 @@
 				</div>
 				<div class="product-content">
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img1.jpg">
+						<a href="product">
+							<img src="/static/img/product/img1.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -178,8 +178,8 @@
 						</div>						
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img2.jpg">
+						<a href="product">
+							<img src="/static/img/product/img2.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Pants</h3>
@@ -189,8 +189,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img3.jpg">
+						<a href="product">
+							<img src="/static/img/product/img3.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Watches</h3>
@@ -200,8 +200,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img4.jpg">
+						<a href="product">
+							<img src="/static/img/product/img4.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -211,8 +211,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img5.jpg">
+						<a href="product">
+							<img src="/static/img/product/img5.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Glasses</h3>
@@ -222,8 +222,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img6.jpg">
+						<a href="product">
+							<img src="/static/img/product/img6.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Women's / Hand Bags</h3>
@@ -233,8 +233,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img7.jpg">
+						<a href="product">
+							<img src="/static/img/product/img7.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Men's / Shoes</h3>
@@ -244,8 +244,8 @@
 						</div>
 					</div>
 					<div class="product">
-						<a href="product.html">
-							<img src="../static/img/product/img8.jpg">
+						<a href="product">
+							<img src="/static/img/product/img8.jpg">
 						</a>
 						<div class="product-detail">
 							<h3>Women's / Hand Bags</h3>
@@ -271,10 +271,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="about.html">About</a></li>
-							<li><a href="contact.html">Contact</a></li>
-							<li><a href="refund.html">Refund Policy</a></li>
-							<li><a href="terms.html">Terms & Conditions</a></li>
+							<li><a href="about">About</a></li>
+							<li><a href="contact">Contact</a></li>
+							<li><a href="refund">Refund Policy</a></li>
+							<li><a href="terms">Terms & Conditions</a></li>
 						</ul>
 					</div>
 				</div>
@@ -284,10 +284,10 @@
 					</div>
 					<div class="widget-content">
 						<ul>
-							<li><a href="account.html">My Account</a></li>
-							<li><a href="orders.html">My Orders</a></li>
-							<li><a href="cart.html">Cart</a></li>
-							<li><a href="checkout.html">Checkout</a></li>
+							<li><a href="account">My Account</a></li>
+							<li><a href="orders">My Orders</a></li>
+							<li><a href="cart">Cart</a></li>
+							<li><a href="checkout">Checkout</a></li>
 						</ul>
 					</div>
 				</div>
@@ -298,9 +298,9 @@
 					<div class="widget-content">
 						<div class="follow">
 							<ul>
-								<li><a href="#"><img src="../static/img/icons/facebook.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/twitter.png"></a></li>
-								<li><a href="#"><img src="../static/img/icons/instagram.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/facebook.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/twitter.png"></a></li>
+								<li><a href="#"><img src="/static/img/icons/instagram.png"></a></li>
 							</ul>
 						</div>						
 					</div>
@@ -312,7 +312,7 @@
 							<form>
 								<div class="form-group">
 									<input type="text" class="form-control" name="subscribe" placeholder="Email">
-									<img src="../static/img/icons/paper_plane.png">
+									<img src="/static/img/icons/paper_plane.png">
 								</div>
 							</form>
 						</div>						
@@ -324,9 +324,9 @@
 					<p>Copyright 2021 - All Rights Reserved</p>
 				</div>
 				<div class="payment-mode">
-					<img src="../static/img/icons/paper_money.png">
-					<img src="../static/img/icons/visa.png">
-					<img src="../static/img/icons/mastercard.png">
+					<img src="/static/img/icons/paper_money.png">
+					<img src="/static/img/icons/visa.png">
+					<img src="/static/img/icons/mastercard.png">
 				</div>
 			</div> <!-- Footer Bar -->
 		</div>
